test/zinc_source/compile_errors/callables/12_channel_bound_method.zn
// expected-error: closure captures are not transport-safe for channel send
struct Counter {
    count: 0

    fn inc() {
        self.count = self.count + 1
    }
}

fn main() {
    c = Counter {}
    jobs = chan()
    jobs <- c.inc
}
